# mhguide-to-csv

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
resources/: genes.csv
src/: cli.rs  export_record.rs  files.rs  hgnc.rs  main.rs  mhguide.rs
testfiles/: biomarkers-mhguide.json  cnv-mhguide.json  rnafusion-mhguide.json  sv-mhguide.json  sv_del-mhguide.json
