[package]
name = "mhguide-to-csv"
version = "0.1.0"
edition = "2024"
authors = ["Paul-Christian Volkmer <code@pcvolkmer.de>"]
license = "GPL-3.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.4"
clap = { version = "4.5", features = ["std", "help", "usage", "derive"], default-features = false }
regex = "1.12"
rayon = "1.11"

[dev-dependencies]
rstest = "0.26"

# Lints

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = { level = "warn", priority = -1 }

[lints.rust]
unused_must_use = "deny"