[package]
name = "mhguide-to-csv"
version = "0.2.2"
edition = "2024"
authors = ["Paul-Christian Volkmer"]
description = "Application convert MH-Guide files into readable CSV files"
license = "GPL-2"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.4"
clap = { version = "4.5", features = ["std", "help", "usage", "derive"], default-features = false }
regex = "1.12"
rayon = "1.11"

[dev-dependencies]
rstest = "0.26"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true
panic = "abort"

# Lints

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = { level = "warn", priority = -1 }

[lints.rust]
unused_must_use = "deny"

# Packaging

[package.metadata.deb]
copyright = "Copyright (C) 2026 the original author or authors"
extended-description = "Application convert MH-Guide files into readable CSV files"
assets = [
    ["target/release/mhguide-to-csv", "usr/bin/", "755"]
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/x86_64-unknown-linux-gnu/release/mhguide-to-csv", dest = "/usr/bin/", mode = "755" }
]